Model optimized with SVM

--- a/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
+++ b/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
@@ -365,7 +365,7 @@
     "    #You could try a different cluster algorithm here\n",
     "    #km = KMeans(n_clusters = n_clusters)   #little slower then Mini b # 28% MAPE\n",
     "    #km = MiniBatchKMeans(n_clusters = n_clusters)# 28%\n",
-    "    km = mixture.GaussianMixture(n_components=n_clusters,covariance_type=\"full\") #27%\n",
+    "    km = mixture.GaussianMixture(n_components=n_clusters,covariance_type=\"full\") \n",
     "    km.fit(targets_arr)\n",
     "    \n",
     "    for feature in list_of_features:\n",
@@ -387,129 +387,6 @@
    "source": [
     "centroids = discretize_target(3, first_ten_extracted)\n",
     "pd.DataFrame(first_ten_extracted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn import svm\n",
-    "from sklearn import naive_bayes\n",
-    "from sklearn import linear_model\n",
-    "from sklearn import mixture\n",
-    "from sklearn import tree\n",
-    "\n",
-    "def calculate_prediction(historylength_days, it_slices, minutes, increment,num_of_class, shoulddiscretize=True):\n",
-    "    historyslices = historylength_days*24*60/increment\n",
-    "    skipintermediate = np.ceil(minutes/increment)\n",
-    "    training_historic = list()\n",
-    "    intermediate = list()\n",
-    "            \n",
-    "    cnt = 0\n",
-    "    for sli in it_slices:\n",
-    "        cnt += 1\n",
-    "        \n",
-    "        \n",
-    "        extracted_features = extract_features(sli)\n",
-    "        intermediate.insert(0, extracted_features) #we don't want any overlap of historic and prediction data\n",
-    "        if len(intermediate) > skipintermediate: \n",
-    "            training_historic.insert(0, intermediate.pop())\n",
-    "        \n",
-    "        if len(training_historic) > historyslices:\n",
-    "            training_historic.pop()\n",
-    "            \n",
-    "        if cnt > (historyslices + skipintermediate):\n",
-    "            if shoulddiscretize: #The centroids can change over time, this is why rediscreize each time\n",
-    "                km = discretize_target(num_of_class, training_historic) #changed the discretize_target clusters\n",
-    "                            \n",
-    "            Xtrain, Ytrain = to_ml_dataset(training_historic, shoulddiscretize) #trainingset\n",
-    "            Xtest, Ytest = to_ml_dataset([extracted_features], shoulddiscretize) #predictionset\n",
-    "            \n",
-    "            #yield training_historic, extracted_features\n",
-    "            \n",
-    "            try:\n",
-    "                #predictor = tree.ExtraTreeClassifier() #you may want to do the training once a day/week to make the prediction faster\n",
-    "                #predictor = naive_bayes.GaussianNB()\n",
-    "                #predictor = naive_bayes.MultinomialNB()\n",
-    "                predictor = naive_bayes.BernoulliNB() # 140 or 100, 3 days  was best mape 24, nrmse 69\n",
-    "                #predictor = linear_model.RidgeClassifier()\n",
-    "                #predictor = linear_model.SGDClassifier()   # not good\n",
-    "                #predictor = mixture.BayesianGaussianMixture()\n",
-    "                #predictor = svm.SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-    "                #                    decision_function_shape='ovr', degree=3, gamma='auto', kernel='sigmoid',\n",
-    "                #                    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-    "                #                    tol=0.001, verbose=False)\n",
-    "                clf = predictor.fit(Xtrain, Ytrain) #actually training the machine learning algorithm\n",
-    "                predicted = clf.predict(Xtest)[0]\n",
-    "                if shoulddiscretize:\n",
-    "                    predicted = undiscretize_target(km, predicted)\n",
-    "                \n",
-    "                work_actual = extracted_features['target']\n",
-    "                yield ForecastResult(sli.currenttime, work_actual, predicted)\n",
-    "            except Exception as e: \n",
-    "                print(\"Error occured-continuing: \" + str(e))\n",
-    "                pass\n",
-    "                \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "def calculate_persistence_variant(historylength_days, it_slices, minutes, increment, shoulddiscretize=True):\n",
-    "    historyslices = historylength_days*24*60/increment\n",
-    "    skipintermediate = np.ceil(minutes/increment)\n",
-    "    training_historic = list()\n",
-    "    intermediate = list()\n",
-    "    \n",
-    "    one_day_holder = 0\n",
-    "    pred_count = False\n",
-    "    \n",
-    "    cnt = 0\n",
-    "    for sli in it_slices:\n",
-    "        cnt += 1\n",
-    "        \n",
-    "        temp_target = calc_average_load(sli.actuals)\n",
-    "        intermediate.insert(0, temp_target) #we don't want any overlap of historic and prediction data\n",
-    "        if len(intermediate) > skipintermediate: \n",
-    "            training_historic.insert(0, intermediate.pop())\n",
-    "        \n",
-    "        if len(training_historic) > historyslices:\n",
-    "            training_historic.pop()\n",
-    "            \n",
-    "        if cnt > (historyslices + skipintermediate):            \n",
-    "            try:\n",
-    "                if not pred_count:\n",
-    "                    one_day_holder = temp_target\n",
-    "                    pred_count = True\n",
-    "                    last_price = training_historic[0]\n",
-    "                    yield ForecastResult(sli.currenttime, one_day_holder, last_price)\n",
-    "                    continue\n",
-    "                work_actual = temp_target\n",
-    "                predicted = one_day_holder\n",
-    "                one_day_holder = work_actual\n",
-    "                if predicted > 600:\n",
-    "                    predicted = 500\n",
-    "                #day_diff = work_actual - predicted\n",
-    "                #if abs(day_diff)>200:\n",
-    "                #    predicted += day_diff/2\n",
-    "                #    predicted  = min(max(predicted,120),1000)\n",
-    "                #print(\"this is work actual : \" + str(work_actual))\n",
-    "                #print(\"this is predicted : \" + str(predicted))\n",
-    "                #print(\"Done...\")\n",
-    "                yield ForecastResult(sli.currenttime, work_actual, predicted)\n",
-    "            except Exception as e: \n",
-    "                print(\"Error occured-continuing: \" + str(e))\n",
-    "                pass"
    ]
   },
   {
@@ -697,10 +574,142 @@
    },
    "outputs": [],
    "source": [
-    "horizon1 = 100 # 100 for both and 3 days is best\n",
-    "historylength1 = 2 # 2 is better then 3\n",
-    "increment1 = 100\n",
-    "num_discrete_class = 20"
+    "from sklearn import svm\n",
+    "from sklearn import naive_bayes\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import mixture\n",
+    "from sklearn import tree\n",
+    "from sklearn import ensemble\n",
+    "\n",
+    "def calculate_prediction(historylength_days, it_slices, minutes, increment,num_of_class, algorithm,shoulddiscretize=True):\n",
+    "    historyslices = historylength_days*24*60/increment\n",
+    "    skipintermediate = np.ceil(minutes/increment)\n",
+    "    training_historic = list()\n",
+    "    intermediate = list()\n",
+    "            \n",
+    "    cnt = 0\n",
+    "    for sli in it_slices:\n",
+    "        cnt += 1\n",
+    "        \n",
+    "        \n",
+    "        extracted_features = extract_features(sli)\n",
+    "        intermediate.insert(0, extracted_features) #we don't want any overlap of historic and prediction data\n",
+    "        if len(intermediate) > skipintermediate: \n",
+    "            training_historic.insert(0, intermediate.pop())\n",
+    "        \n",
+    "        if len(training_historic) > historyslices:\n",
+    "            training_historic.pop()\n",
+    "            \n",
+    "        if cnt > (historyslices + skipintermediate):\n",
+    "            if shoulddiscretize: #The centroids can change over time, this is why rediscreize each time\n",
+    "                km = discretize_target(num_of_class, training_historic) #changed the discretize_target clusters\n",
+    "                            \n",
+    "            Xtrain, Ytrain = to_ml_dataset(training_historic, shoulddiscretize) #trainingset\n",
+    "            Xtest, Ytest = to_ml_dataset([extracted_features], shoulddiscretize) #predictionset\n",
+    "            \n",
+    "            #yield training_historic, extracted_features\n",
+    "            \n",
+    "            try:\n",
+    "                #predictor = ensemble.AdaBoostRegressor(loss=\"square\")\n",
+    "                \n",
+    "                clf = algorithm.fit(Xtrain, Ytrain) #actually training the machine learning algorithm\n",
+    "                predicted = clf.predict(Xtest)[0]\n",
+    "                if shoulddiscretize:\n",
+    "                    predicted = undiscretize_target(km, predicted)\n",
+    "                \n",
+    "                work_actual = extracted_features['target']\n",
+    "                yield ForecastResult(sli.currenttime, work_actual, predicted)\n",
+    "            except Exception as e: \n",
+    "                print(\"Error occured-continuing: \" + str(e))\n",
+    "                pass\n",
+    "                \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import ensemble,tree\n",
+    "from sklearn import gaussian_process\n",
+    "from sklearn import kernel_ridge,svm\n",
+    "from sklearn import linear_model, neighbors,neural_network\n",
+    "solution_algo_ensemble = [\n",
+    "                 ensemble.ExtraTreesRegressor(),#49\n",
+    "                ensemble.GradientBoostingRegressor(),#50\n",
+    "                 ensemble.RandomForestRegressor(),#52\n",
+    "                ]\n",
+    "solution_algo_gaus = [\n",
+    "    gaussian_process.GaussianProcessRegressor(),#100\n",
+    "    \n",
+    "]\n",
+    "sol_alg_kernrig = [\n",
+    "    kernel_ridge.KernelRidge()#354\n",
+    "]\n",
+    "sol_lin_model = [\n",
+    "    #linear_model.ARDRegression(),#90\n",
+    "    #linear_model.BayesianRidge(), # 47 - 0.70\n",
+    "    #linear_model.ElasticNet(), # 185 - 4\n",
+    "    #linear_model.HuberRegressor(), # 43 - 0.76\n",
+    "    #linear_model.Lars(), # worst ever\n",
+    "    #linear_model.Lasso(),# 257 - 4\n",
+    "    linear_model.LassoLars(),# 63 - 0.80\n",
+    "    linear_model.LassoLarsIC(),# 51 - 0.66\n",
+    "    linear_model.LinearRegression(),# 1080 - 30\n",
+    "    linear_model.PassiveAggressiveRegressor(), # 75 - 0.93\n",
+    "    linear_model.RANSACRegressor(), # problem none...\n",
+    "    linear_model.Ridge(),# 423 - 10 \n",
+    "    linear_model.SGDRegressor(), # second worst\n",
+    "    linear_model.TheilSenRegressor() # 4000\n",
+    "]\n",
+    "sol_neigh = [\n",
+    "    neighbors.KNeighborsRegressor(), # 37 - 0.66\n",
+    "    neighbors.RadiusNeighborsRegressor(), # nan\n",
+    "]\n",
+    "sol_nn = [\n",
+    "    neural_network.MLPRegressor() # 70 - 0.90\n",
+    "]\n",
+    "sol_neigh_class = [\n",
+    "    neighbors.KNeighborsClassifier() # 56 - 0.87\n",
+    "]\n",
+    "sol_svm = [\n",
+    "    svm.LinearSVR(), # 92 - 1.28\n",
+    "    svm.NuSVR(), # 29 - 0.67\n",
+    "    svm.SVR(), # 27 - 0.68 # hor 200, 7, 50, --> 28 - 0.62\n",
+    "    #  svr continue \n",
+    "    #  300 7 50  --> 32 - 0.57\n",
+    "    #  300 7 100 --> 32 - 0.56\n",
+    "    #  400 7 100 --> 32 - 0.50\n",
+    "    #  500 4 300 --> 32 - 0.47\n",
+    "    #  600 4 400 --> 31 - 0.42\n",
+    "    #  800 4 400 --> 29 - 0.39\n",
+    "    #  800 2 400 --> 28 - 0.38\n",
+    "    # 1000 2 400 --> 28 - 0.34\n",
+    "    # 1000 2 600 --> 28 - 0.33\n",
+    "]\n",
+    "sol_tree = [\n",
+    "    tree.DecisionTreeRegressor(), # 57 - 0.80\n",
+    "    tree.ExtraTreeRegressor() # 58 - 0.85\n",
+    "]\n",
+    "sol_alg = svm.SVR(kernel=\"rbf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "horizon1 = 1000 \n",
+    "historylength1 = 2\n",
+    "increment1 = 600\n",
+    "num_discrete_class = 20\n",
+    "discretize = False"
    ]
   },
   {
@@ -709,13 +718,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prediction_evaluation(horizon_and_predbase, historylength, increment, num_of_class):\n",
+    "def prediction_evaluation(horizon_and_predbase, historylength, increment, num_of_class,discretize,algorithm):\n",
     "    evaluation_length = int(2 * 7 * 24 * 60 /increment)\n",
-    "    res_list = list(it_take(evaluation_length, calculate_prediction(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment,num_of_class)))\n",
+    "    #evaluation_length = 100\n",
+    "    res_list = list(it_take(evaluation_length, calculate_prediction(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment,num_of_class,algorithm,discretize)))\n",
     "    #res_list = list(it_take(evaluation_length, calculate_persistence(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment)))\n",
     "    return eval_mape(res_list),nrmse(res_list), res_list\n",
     "\n",
-    "percent_mape,percent_nrmse,pred_results  = prediction_evaluation(horizon1, historylength1, increment1,num_discrete_class) #Evaluate [horizon1] ahead forecast, [historylength1] days of learning, every [increment1] minutes\n",
+    "#for sol_alg in sol_tree    \n",
+    "percent_mape,percent_nrmse,pred_results  = prediction_evaluation(horizon1, historylength1, increment1,num_discrete_class,discretize,sol_alg) #Evaluate [horizon1] ahead forecast, [historylength1] days of learning, every [increment1] minutes\n",
     "print(\"The MAPE of the prediction was:\", percent_mape)\n",
     "print(\"The NRMSE of the prediction was:\", percent_nrmse)\n",
     "pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)"
