last state, could not decide which param to choose

--- a/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
+++ b/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -114,7 +116,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "household_data_samples = list(it_take(4, it_load_data(sourcefile)))\n",
@@ -191,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "itslice = it_timeslices(it_load_data(sourcefile), 15, 15)\n",
@@ -316,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "itslice = it_timeslices(it_load_data(sourcefile), 15, 15)\n",
@@ -382,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "centroids = discretize_target(3, first_ten_extracted)\n",
@@ -688,7 +698,10 @@
     "    #  800 4 400 --> 29 - 0.39\n",
     "    #  800 2 400 --> 28 - 0.38\n",
     "    # 1000 2 400 --> 28 - 0.34\n",
-    "    # 1000 2 600 --> 28 - 0.33\n",
+    "    # 1000 2 600 --> 28 - 0.33    ---> benchmark\n",
+    "    # 1000 2 1000--> 34 - 0.38   ---> 37 - 0.45\n",
+    "    # 1200 2 1200--> 37 - 0.38   ---> 37 - 0.45\n",
+    "    #  600 2 600 --> 32 - 0.48  ---> 62 - 0.70\n",
     "]\n",
     "sol_tree = [\n",
     "    tree.DecisionTreeRegressor(), # 57 - 0.80\n",
@@ -705,9 +718,9 @@
    },
    "outputs": [],
    "source": [
-    "horizon1 = 1000 \n",
+    "horizon1 = 400 \n",
     "historylength1 = 2\n",
-    "increment1 = 600\n",
+    "increment1 = 400\n",
     "num_discrete_class = 20\n",
     "discretize = False"
    ]
@@ -725,11 +738,25 @@
     "    #res_list = list(it_take(evaluation_length, calculate_persistence(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment)))\n",
     "    return eval_mape(res_list),nrmse(res_list), res_list\n",
     "\n",
+    "def benchmark_evaluation(horizon_and_predbase, historylength, increment, num_of_class,discretize,algorithm):\n",
+    "    evaluation_length = int(2 * 7 * 24 * 60 /increment)\n",
+    "    res_list = list(it_take(evaluation_length, calculate_persistence(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment)))\n",
+    "    return eval_mape(res_list),nrmse(res_list), res_list\n",
+    "\n",
+    "\n",
     "#for sol_alg in sol_tree    \n",
     "percent_mape,percent_nrmse,pred_results  = prediction_evaluation(horizon1, historylength1, increment1,num_discrete_class,discretize,sol_alg) #Evaluate [horizon1] ahead forecast, [historylength1] days of learning, every [increment1] minutes\n",
     "print(\"The MAPE of the prediction was:\", percent_mape)\n",
     "print(\"The NRMSE of the prediction was:\", percent_nrmse)\n",
-    "pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)"
+    "pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)\n",
+    "\n",
+    "# benchmark \n",
+    "# 1000 2 1000 ---> 37 0.45\n",
+    "\n",
+    "pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)\n",
+    "percent_mape_bench,percent_nrmse_bench,bench_results  = benchmark_evaluation(horizon1, historylength1, increment1,num_discrete_class,discretize,sol_alg) #Evaluate [horizon1] ahead forecast, [historylength1] days of learning, every [increment1] minutes\n",
+    "print(\"The MAPE of the benchmark Persistence with same parameters was:\", percent_mape_bench)\n",
+    "print(\"The NRMSE of the benchmark Persistence with same parameters was:\", percent_nrmse_bench)"
    ]
   },
   {
@@ -739,7 +766,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#print(percent_mape_bench)\n",
+    "pred_results_df = pd.DataFrame(list(bench_results), columns=ForecastResult._fields)"
+   ]
   },
   {
    "cell_type": "code",
@@ -749,25 +779,6 @@
    "source": [
     "pred_results_df.set_index('ts').plot()\n",
     "len(pred_results_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import RandomizedSearchCV as rand_search\n",
-    "\n",
-    "class our_classifier:\n",
-    "    def __init__(self,horizon_and_predbase, historylength, increment):\n",
-    "        \n",
-    "    \n",
-    "    def fit()\n",
-    "\n",
-    "from sklearn.model_selection import GridSearchCV\n"
    ]
   }
  ],
