the notebook to commit. Note: This contains output of the benchmark and prediction, so cells are not cleaned.

--- a/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
+++ b/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
@@ -2,11 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created `%t` as an alias for `%timeit`.\n",
+      "Created `%%t` as an alias for `%%timeit`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:98% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os\n",
     "import gzip\n",
@@ -60,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -303,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -321,11 +340,366 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0% [##########] 100% | ETA: 00:00:00\n",
+      "Total time elapsed: 00:00:01\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>avg</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>kurtosis</th>\n",
+       "      <th>last</th>\n",
+       "      <th>s06_kurtosis</th>\n",
+       "      <th>s06_last</th>\n",
+       "      <th>s06_max</th>\n",
+       "      <th>s06_mean</th>\n",
+       "      <th>s06_skew</th>\n",
+       "      <th>s06_stdev</th>\n",
+       "      <th>...</th>\n",
+       "      <th>s41_stdev</th>\n",
+       "      <th>s47_kurtosis</th>\n",
+       "      <th>s47_last</th>\n",
+       "      <th>s47_max</th>\n",
+       "      <th>s47_mean</th>\n",
+       "      <th>s47_skew</th>\n",
+       "      <th>s47_stdev</th>\n",
+       "      <th>skew</th>\n",
+       "      <th>target</th>\n",
+       "      <th>target_disc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>128.791765</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.704616</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.003769</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>69.970588</td>\n",
+       "      <td>-0.984050</td>\n",
+       "      <td>43.317898</td>\n",
+       "      <td>1.107075</td>\n",
+       "      <td>94.716216</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>94.716216</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.397772</td>\n",
+       "      <td>14.250000</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.588798</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>472</td>\n",
+       "      <td>36.135135</td>\n",
+       "      <td>1.742336</td>\n",
+       "      <td>52.629332</td>\n",
+       "      <td>1.529283</td>\n",
+       "      <td>103.707611</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103.707611</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.555061</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.989873</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>44.867882</td>\n",
+       "      <td>0.096403</td>\n",
+       "      <td>47.072917</td>\n",
+       "      <td>0.997992</td>\n",
+       "      <td>227.378818</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>227.378818</td>\n",
+       "      <td>1</td>\n",
+       "      <td>62.829335</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>445.859791</td>\n",
+       "      <td>-1.895908</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>108</td>\n",
+       "      <td>57.340858</td>\n",
+       "      <td>-0.292380</td>\n",
+       "      <td>49.344771</td>\n",
+       "      <td>7.227127</td>\n",
+       "      <td>82.547188</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>82.547188</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.544584</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.642530</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94</td>\n",
+       "      <td>23.331096</td>\n",
+       "      <td>1.165091</td>\n",
+       "      <td>40.592397</td>\n",
+       "      <td>1.509998</td>\n",
+       "      <td>141.808082</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>141.808082</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.396100</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.730633</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>278</td>\n",
+       "      <td>82.660674</td>\n",
+       "      <td>-1.356519</td>\n",
+       "      <td>36.953106</td>\n",
+       "      <td>0.423364</td>\n",
+       "      <td>66.602213</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>66.602213</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52.589100</td>\n",
+       "      <td>35.333333</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>68.972691</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>447</td>\n",
+       "      <td>7.872483</td>\n",
+       "      <td>6.736326</td>\n",
+       "      <td>33.365903</td>\n",
+       "      <td>4.248270</td>\n",
+       "      <td>132.836000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>132.836000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.230348</td>\n",
+       "      <td>14.500000</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.433933</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>106</td>\n",
+       "      <td>74.171625</td>\n",
+       "      <td>-1.233901</td>\n",
+       "      <td>41.078039</td>\n",
+       "      <td>0.720448</td>\n",
+       "      <td>86.719477</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>86.719477</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.236748</td>\n",
+       "      <td>39.500000</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.318184</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>523</td>\n",
+       "      <td>27.838636</td>\n",
+       "      <td>2.789390</td>\n",
+       "      <td>51.127949</td>\n",
+       "      <td>2.236294</td>\n",
+       "      <td>213.666654</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>213.666654</td>\n",
+       "      <td>2</td>\n",
+       "      <td>38.916813</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>427.818939</td>\n",
+       "      <td>-1.956871</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>99</td>\n",
+       "      <td>52.296651</td>\n",
+       "      <td>-0.199573</td>\n",
+       "      <td>47.299899</td>\n",
+       "      <td>6.139343</td>\n",
+       "      <td>115.108080</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 49 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          avg  hour   kurtosis       last  s06_kurtosis  s06_last  s06_max  \\\n",
+       "0  128.791765     0   1.704616   0.000000          -3.0       0.0        0   \n",
+       "1   94.716216     0   4.397772  14.250000          -3.0       0.0        0   \n",
+       "2  103.707611     0   0.555061  12.500000          -3.0       0.0        0   \n",
+       "3  227.378818     1  62.829335  27.000000          -3.0       0.0        0   \n",
+       "4   82.547188     1   2.544584   2.800000          -3.0       0.0        0   \n",
+       "5  141.808082     1  -0.396100   4.666667          -3.0       0.0        0   \n",
+       "6   66.602213     1  52.589100  35.333333          -3.0       0.0        0   \n",
+       "7  132.836000     2  -0.230348  14.500000          -3.0       0.0        0   \n",
+       "8   86.719477     2  11.236748  39.500000          -3.0       0.0        0   \n",
+       "9  213.666654     2  38.916813   3.500000          -3.0       0.0        0   \n",
+       "\n",
+       "   s06_mean  s06_skew  s06_stdev     ...        s41_stdev  s47_kurtosis  \\\n",
+       "0       0.0       0.0        0.0     ...         0.000000     -1.003769   \n",
+       "1       0.0       0.0        0.0     ...         0.000000      8.588798   \n",
+       "2       0.0       0.0        0.0     ...         0.000000     -1.989873   \n",
+       "3       0.0       0.0        0.0     ...       445.859791     -1.895908   \n",
+       "4       0.0       0.0        0.0     ...         0.000000     -0.642530   \n",
+       "5       0.0       0.0        0.0     ...         0.000000      2.730633   \n",
+       "6       0.0       0.0        0.0     ...         0.000000     68.972691   \n",
+       "7       0.0       0.0        0.0     ...         0.000000     -0.433933   \n",
+       "8       0.0       0.0        0.0     ...         0.000000     18.318184   \n",
+       "9       0.0       0.0        0.0     ...       427.818939     -1.956871   \n",
+       "\n",
+       "   s47_last  s47_max   s47_mean  s47_skew  s47_stdev      skew      target  \\\n",
+       "0       0.0      105  69.970588 -0.984050  43.317898  1.107075   94.716216   \n",
+       "1      96.0      472  36.135135  1.742336  52.629332  1.529283  103.707611   \n",
+       "2       0.0       96  44.867882  0.096403  47.072917  0.997992  227.378818   \n",
+       "3      94.0      108  57.340858 -0.292380  49.344771  7.227127   82.547188   \n",
+       "4       0.0       94  23.331096  1.165091  40.592397  1.509998  141.808082   \n",
+       "5       0.0      278  82.660674 -1.356519  36.953106  0.423364   66.602213   \n",
+       "6     106.0      447   7.872483  6.736326  33.365903  4.248270  132.836000   \n",
+       "7       0.0      106  74.171625 -1.233901  41.078039  0.720448   86.719477   \n",
+       "8      99.0      523  27.838636  2.789390  51.127949  2.236294  213.666654   \n",
+       "9       0.0       99  52.296651 -0.199573  47.299899  6.139343  115.108080   \n",
+       "\n",
+       "   target_disc  \n",
+       "0            0  \n",
+       "1            0  \n",
+       "2            0  \n",
+       "3            0  \n",
+       "4            0  \n",
+       "5            0  \n",
+       "6            0  \n",
+       "7            0  \n",
+       "8            0  \n",
+       "9            0  \n",
+       "\n",
+       "[10 rows x 49 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "itslice = it_timeslices(it_load_data(sourcefile), 15, 15)\n",
     "first_ten_extracted = list(it_take(10, map(extract_features, itslice)))\n",
@@ -356,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -531,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -551,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -578,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -637,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -712,24 +1086,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "horizon1 = 400 \n",
+    "horizon1 = 1000 \n",
     "historylength1 = 2\n",
-    "increment1 = 400\n",
+    "increment1 = 1000\n",
     "num_discrete_class = 20\n",
     "discretize = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0% [####################] 100% | ETA: 00:00:00"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The MAPE of the prediction was: 34.27711873285752\n",
+      "The NRMSE of the prediction was: 0.38725845474187964\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total time elapsed: 00:02:22\n",
+      "0% [####################] 100% | ETA: 00:00:00"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The MAPE of the benchmark Persistence with same parameters was: 37.86072414878426\n",
+      "The NRMSE of the benchmark Persistence with same parameters was: 0.45097129819127957\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total time elapsed: 00:01:27\n"
+     ]
+    }
+   ],
    "source": [
     "def prediction_evaluation(horizon_and_predbase, historylength, increment, num_of_class,discretize,algorithm):\n",
     "    evaluation_length = int(2 * 7 * 24 * 60 /increment)\n",
@@ -774,7 +1189,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pred_results_df.set_index('ts').plot()\n",
